--- a/.gitignore
+++ b/.gitignore
@@ -98,7 +98,8 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+docs/.vuepress/dist
+docs/.vitepress/cache
 
 # vuepress v2.x temp and cache directory
 .temp
